[package]
name = "os-glue"
version = "0.0.0"
authors = ["Ben Stuart <mail@bstuart.de>"]
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
embedded_types = "0.3.2"

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp.git"
version = "0.4"
default-features = false
features = ["proto-ipv4", "proto-ipv6"]

[target.'cfg(target_os="riot")'.dependencies]
#riot-sys = { git = "https://gitlab.cs.hs-rm.de/embedded-util/riot-sys.git", tag = "v0.1.3" }
riot-sys = { path = "../riot-sys" }

[features]
default = []
std = []
samr21-xpro = ["riot-sys/samr21-xpro"]
