[package]
name = "os-glue"
version = "0.0.0"
authors = ["Ben Stuart <mail@bstuart.de>"]
license = "MIT OR Apache-2.0"
build = "build.rs"
edition = "2018"

[dependencies]
embedded_types = "0.3.2"
mac_address = {version = "0.8.0", default-features = false, optional = true}
spin = {version = "0.4.9", optional = true }
time = {version = "0.1.4", optional = true }

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp.git"
version = "0.5"
default-features = false
features = ["proto-ipv4", "proto-ipv6"]

[target.'cfg(target_os="riot")'.dependencies]
riot-sys = { git = "https://github.com/bendst/riot-sys.git", tag = "v0.1.8" }


[features]
default = []
std = ["mac_address", "spin", "time"]

samr21-xpro = ["riot-sys/samr21-xpro"]
